--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -1,7 +1,8 @@
 .selection {
     border: 2px solid red;
-    height: 100px;
-    width: 100px;
+    display: flex;
+    align-items: end;
+    gap: 10px;
 }
 
 
@@ -32,3 +33,23 @@
     width: 100%;
     margin: 25px;
 }
+
+.dropdown-menu {
+    max-height: 25vh;
+    overflow-y: auto;
+}
+
+#myInput {
+    box-sizing: border-box;
+    background-image: url('searchicon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+  }
+
+  #myInput:focus {outline: 3px solid #ddd;}
+
+
