--- a/flask_app/Templates/official.html
+++ b/flask_app/Templates/official.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
-<body>
-    {% for post in posts %}
-    <h1>{{ post.username }}</h1>
-    <p>{{post.text}}</p>
-    <p>{{post.timestamp}}</p>
-    {% if post.query[23:] == post.username[1:]%}
-    <p>this is not a repost</p>
-    {% endif %}
-    {% endfor %}
+<body class="bg-dark">
+    <div class="">
+
+        {% for post in posts %}
+        <div class="card border border-dark" style="width: 40rem; max-height: 30rem">
+            <div class="card-body bg-success">
+                <div class="card-title text-light d-flex align-items-end gap-3">
+                    <img src="{{post.post_avatar}}" class="rounded-start" style="width: 5rem;" alt="...">
+                    <h5 class="">{{post.username}}'s post</h5>
+                  </div>
+                <h6 class="card-subtitle mb-2 text-light">this was posted {{post.timestamp}}</h6>
+                <p class="card-text text-light" style="max-height: 50%;">{{post.text}}</p>
+                <a href="{{post.url}}" target="_blank" class="card-link text-light">view post</a>
+                <img class="card-img-bottom" src="" alt="">
+            </div>
+        </div>
+        
+        {% endfor %}
+    </div>
+
 </body>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </html>
