small coloring change

--- a/flask_app/Templates/search.html
+++ b/flask_app/Templates/search.html
@@ -16,7 +16,7 @@
             <div class="selection">
                 <div class="dropdown my_dropdown">
                     <p class="text-light">Select By State</p>
-                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         States
                     </button>
                     <div id="state_dropdown">
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="dropdown my_dropdown">
-                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-success btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Officials
                     </button>
                     <div id="official_dropdown">
