--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -1,7 +1,8 @@
-body {
-    background-color: black;
+body, html {
+    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    height: 100%;
 }
 
 .selection {
@@ -12,33 +13,57 @@ body {
 }
 
 
-.my_header {
-    background-color: red;
-    padding: 20px;
+.official_header {
     text-align: center;
-    height: 100px;
+    height: 5rem;
     width: 100%;
-    margin: 25px;
-
+    z-index: 2;
+    text-align: start;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+    color: black;
 }
 
-.my_container {
+.official_sidebar {
+    text-align: center;
+    height: 150vh;
+    width: 10rem;
+    /* margin-bottom: 25px; */
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+.official_container {
+    display: flex;
+    align-items: start;
+    min-height: 100%;
+    width: 100%;
+}
+
+.user_avatar {
+    width: 50px; 
+    height: 50px; 
+    border-radius: 50%; 
+    position: absolute; 
+    top: -9px; 
+    right: -22px; 
+    border: 1px solid red;
+}
+
+
+.official_cards{
+    margin: 0rem 10% 0 10rem;
+    padding: 20px;
+    gap: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
-    border: 2px solid red
+    flex-wrap: wrap;
 }
 
-.my_footnotes {
-    background-color: red;
-    padding: 20px;
-    text-align: center;
-    height: 100px;
-    width: 100%;
-    margin: 25px;
+.official_cards > div {
+    margin: auto;
 }
 
 .dropdown-menu {
