--- a/flask_app/Templates/official.html
+++ b/flask_app/Templates/official.html
@@ -8,29 +8,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
-<body class="bg-dark">
-    <div class="">
+<body class="">
+    
+            <div class="official_header">
+                <h1>
 
-        {% for post in posts %}
-        <div class="card border border-dark" style="width: 40rem; max-height: 30rem">
-            <div class="card-body bg-success">
-                <div class="card-title text-light d-flex align-items-end gap-3">
-                    <img src="{{post.post_avatar}}" class="rounded-start" style="width: 5rem;" alt="...">
-                    <h5 class="">{{post.username}}'s post</h5>
-                  </div>
-                <h6 class="card-subtitle mb-2 text-light">this was posted {{post.timestamp}}</h6>
-                <p class="card-text text-light" style="max-height: 50%;">{{post.text}}</p>
-                <a href="{{post.url}}" target="_blank" class="card-link text-light">view post</a>
-                <img class="card-img-bottom" src="" alt="">
+                    <span>{{official.first_name}}</span>
+                    <span>{{official.last_name}}</span>'s stance on palestine
+                </h1>
+                
             </div>
+    <div class="official_container">
+        <div class="official_sidebar bg-dark">
         </div>
-        
-        {% endfor %}
-    </div>
+        <div class="official_cards">
 
-</body>
-<script src="{{ url_for('static', filename='script.js') }}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+            {% for post in posts %}
+            <a href="{{post.url}}">
 
+                <div class="card border-2 border-success mb-3 gap-3 bg-light" style="max-width:40rem; position: relative;">
+                    <img src="{{post.post_avatar}}" class='user_avatar'alt="">
+                    <div class="card-header bg-dark text-light">{{official.first_name}} {{official.last_name}}'s tweet</div>
+                    <div class="card-body bg-light text-dark">
+                        <p class="card-text">{{post.text}}</p>
+                        <div class="text-end">
+                            <h6 class="card-subtitle text-body-secondary align-self-end">{{post.timestamp}}</h6>
+                        </div>
+                    </div>
+                </div>
+            </a>
+                
+                {% endfor %}
+            </div>
+            
+        </div>
+    </body>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    
 </html>
