--- a/flask_app/Templates/official.html
+++ b/flask_app/Templates/official.html
@@ -1,50 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
 </head>
+
 <body class="">
-    
+    <div class="official_container">
+
+        <div class="official_left_div">
+            <div class="bg-dark official_user_info official_sidebar">
+                <!-- Content for left_div -->
+            </div>
+        </div>
+
+        <div class="official_center_div">
             <div class="official_header">
                 <h1>
-
                     <span>{{official.first_name}}</span>
                     <span>{{official.last_name}}</span>'s stance on palestine
                 </h1>
-                
             </div>
-    <div class="official_container">
-        <div class="official_sidebar bg-dark">
-        </div>
-        <div class="official_cards">
-
-            {% for post in posts %}
-            <a href="{{post.url}}">
-
-                <div class="card border-2 border-success mb-3 gap-3 bg-light" style="max-width:40rem; position: relative;">
-                    <img src="{{post.post_avatar}}" class='user_avatar'alt="">
-                    <div class="card-header bg-dark text-light">{{official.first_name}} {{official.last_name}}'s tweet</div>
-                    <div class="card-body bg-light text-dark">
-                        <p class="card-text">{{post.text}}</p>
-                        <div class="text-end">
-                            <h6 class="card-subtitle text-body-secondary align-self-end">{{post.timestamp}}</h6>
+            <div class="official_cards">
+                {% for post in posts | sort(attribute='timestamp', reverse=True) %}
+                    <a href="{{ post.url }}" target="_blank">
+                        <div class="card border-2 border-danger mb-3 gap-3 bg-light" style="max-width:40rem; position: relative;">
+                            <img src="{{ post.post_avatar }}" class='user_avatar' alt="">
+                            <div class="card-header bg-dark text-light">{{ official.first_name }} {{ official.last_name }}'s tweet</div>
+                            <div class="card-body bg-light text-dark">
+                                <p class="card-text">{{ post.text }}</p>
+                                <div class="text-end">
+                                    <h6 class="card-subtitle text-body-secondary align-self-end">{{ post.timestamp }}</h6>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </a>
-                
+                    </a>
                 {% endfor %}
             </div>
-            
         </div>
-    </body>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    
+
+        <div class="official_right_div">
+            <div class="bg-dark official_site_nav">
+                <div class="nav_item">
+                    <a href="#">Home</a>
+                </div>
+                <div class="nav_item">
+                    <a href="#">About</a>
+                </div>
+                <div class="nav_item">
+                    <a href="#">Contact</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</body>
+
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </html>
