--- a/flask_app/Templates/states.html
+++ b/flask_app/Templates/states.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Officals by state</h1>
+    <div class="">
+        <h1>Find your representatives </h1>
+    </div>
     {% for official in officials %}
     <!-- create link to officials/official.id -->
-    <a href="../officials/{{official.id}}">
-        
-        <h2>{{official.first_name}}</h2>
-        <p>{{official.last_name}}</p>
-        <p>{{official.state}}</p>
+    <a href="../officials/{{official.id}}" class="card_link" target="_blank">
+        <div class="card border-2 border-danger mb-3 gap-3 bg-light" style="max-width:40rem; position: relative;">
+            <!-- <img src="{{ official.official_avatar }}" class='user_avatar' alt=""> -->
+            <div class="card-header bg-dark text-light is_link">{{ official.first_name }} {{ official.last_name }}</div>
+            <div class="card-body bg-light text-dark">
+                <p class="card-text is_link">This is a test</p>
+                <div class="text-end">
+            </div>
+            </div>
+        </div>
     </a>
-    {% endfor %}
+{% endfor %}
 </body>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </html>
