--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -28,7 +28,7 @@ html {
 .official_sidebar {
     text-align: center;
     height: 100vh;
-    width: 5rem;
+    width: 10rem;
     position: fixed;
     top: 0;
     z-index: 1;
@@ -41,14 +41,14 @@ html {
 .official_left_div {
     text-align: center;
     height: 150vh;
-    width: 5rem;
+    width: 10rem;
     top: 0;
 }
 
 .official_right_div {
     text-align: center;
     height: 150vh;
-    width: 5rem;
+    width: 10rem;
     top: 0;
     z-index: 1;
 }
@@ -66,6 +66,13 @@ html {
     box-shadow: 0px 0px 50px red;
 
     position: fixed;
+}
+
+#alertsContainer {
+    position: absolute;
+    top: 0;
+    right: -20rem;
+    width: 20rem;
 }
 
 .official_container {
