--- a/flask_app/Templates/official.html
+++ b/flask_app/Templates/official.html
@@ -14,66 +14,10 @@
 
         <div class="official_left_div">
             <div class="bg-dark official_user_info official_sidebar text-light">
-                <!-- def __init__(self, id=None, official_id=None, title=None, short_title=None,
-                api_uri=None, first_name=None, middle_name=None, last_name=None,
-                suffix=None, date_of_birth=None, gender=None, party=None,
-                twitter_account=None, facebook_account=None, youtube_account=None,
-                govtrack_id=None, cspan_id=None, votesmart_id=None, icpsr_id=None,
-                crp_id=None, google_entity_id=None, fec_candidate_id=None, url=None,
-                rss_url=None, contact_form=None, in_office=None, cook_pvi=None,
-                dw_nominate=None, ideal_point=None, seniority=None, next_election=None,
-                total_votes=None, missed_votes=None, total_present=None,
-                last_updated=None, ocd_id=None, office=None, phone=None, fax=None,
-                state=None, district=None, missed_votes_pct=None,
-                votes_with_party_pct=None, votes_against_party_pct=None,
-                at_large=None, geoid=None):
-        self.id = id
-        self.official_id = official_id
-        self.title = title
-        self.short_title = short_title
-        self.api_uri = api_uri
-        self.first_name = first_name
-        self.middle_name = middle_name
-        self.last_name = last_name
-        self.suffix = suffix
-        self.date_of_birth = date_of_birth
-        self.gender = gender
-        self.party = party
-        self.twitter_account = twitter_account
-        self.facebook_account = facebook_account
-        self.youtube_account = youtube_account
-        self.govtrack_id = govtrack_id
-        self.cspan_id = cspan_id
-        self.votesmart_id = votesmart_id
-        self.icpsr_id = icpsr_id
-        self.crp_id = crp_id
-        self.google_entity_id = google_entity_id
-        self.fec_candidate_id = fec_candidate_id
-        self.url = url
-        self.rss_url = rss_url
-        self.contact_form = contact_form
-        self.in_office = in_office
-        self.cook_pvi = cook_pvi
-        self.dw_nominate = dw_nominate
-        self.ideal_point = ideal_point
-        self.seniority = seniority
-        self.next_election = next_election
-        self.total_votes = total_votes
-        self.missed_votes = missed_votes
-        self.total_present = total_present
-        self.last_updated = last_updated
-        self.ocd_id = ocd_id
-        self.office = office
-        self.phone = phone
-        self.fax = fax
-        self.state = state
-        self.district = district
-        self.at_large = at_large
-        self.geoid = geoid
-        self.missed_votes_pct = missed_votes_pct
-        self.votes_with_party_pct = votes_with_party_pct
-        self.votes_against_party_pct = votes_against_party_pct
-        self.post = None -->
+        <div>
+            <span>{{official.first_name}}</span>
+            <span>{{official.last_name}}</span>
+        </div>
         {% if official.twitter_account %}
         <div class="official_user_info_item">
             <a href="https://twitter.com/{{ official.twitter_account }}" target="_blank">
@@ -100,14 +44,55 @@
                     btnId='facebook_icon', 
                     buttonTitle='Facebook', 
                     official='{{official.first_name}} {{official.last_name}}',
-                    alertDiv='FacebookAlertsContainer'
+                    // alertDiv='FacebookAlertsContainer'
                     )">
             </a>
         </div>
-        <div id="FacebookAlertsContainer">
+        <div id="alertsContainer">
 
         </div>
     {% endif %}
+    {% if official.youtube_account %}
+    <div class="official_user_info_item">
+        <a href="https://youtube.com/{{ official.youtube_account }}" target="_blank">
+            <img src="{{ url_for('static', filename='youtube.png') }}" style="max-width: 50%;">
+        </a>
+    </div>
+{% else %}
+    <div id="youtube_icon" class="official_user_info_item">
+        <a href="#" id="youtube_btn">
+            <img src="{{ url_for('static', filename='youtube.png') }}" style="max-width: 50%;" onclick="alertFunction(
+                btnId='youtube_icon', 
+                buttonTitle='youtube', 
+                official='{{official.first_name}} {{official.last_name}}',
+                // alertDiv='FacebookAlertsContainer'
+                )">
+        </a>
+    </div>
+    <div id="alertsContainer">
+
+    </div>
+{% endif %}
+{% if official.youtube_account %}
+<div class="official_user_info_item">
+    <a href="{{ official.url }}" target="_blank">
+        <img src="{{ url_for('static', filename='website.png') }}" style="max-width: 50%;">
+    </a>
+</div>
+{% else %}
+<div id="website_icon" class="official_user_info_item">
+    <a href="#" id="website_btn">
+        <img src="{{ url_for('static', filename='website.png') }}" style="max-width: 50%;" onclick="alertFunction(
+            btnId='website_icon', 
+            buttonTitle='website', 
+            official='{{official.first_name}} {{official.last_name}}',
+            )">
+    </a>
+</div>
+<div id="alertsContainer">
+
+</div>
+{% endif %}
 
         </div>
         </div>
