--- a/flask_app/Templates/official.html
+++ b/flask_app/Templates/official.html
@@ -14,88 +14,95 @@
 
         <div class="official_left_div">
             <div class="bg-dark official_user_info official_sidebar text-light">
-        <div>
-            <span>{{official.first_name}}</span>
-            <span>{{official.last_name}}</span>
-        </div>
-        {% if official.twitter_account %}
-        <div class="official_user_info_item">
-            <a href="https://twitter.com/{{ official.twitter_account }}" target="_blank">
-                <img src="{{ url_for('static', filename='twitter.png') }}" style="max-width: 50%;">
-            </a>
-        </div>
-        {% else %}
-        <div class="official_user_info_item">
-            <a href="#">
-                <img src="{{ url_for('static', filename='twitter.png') }}" style="max-width: 50%;" onclick="alert('coming soon')">
-            </a>
-        </div>
-        {% endif %}
-        {% if official.facebook_account %}
-        <div class="official_user_info_item">
-            <a href="https://facebook.com/{{ official.facebook_account }}" target="_blank">
-                <img src="{{ url_for('static', filename='facebook.png') }}" style="max-width: 50%;">
-            </a>
-        </div>
-    {% else %}
-        <div id="facebook_icon" class="official_user_info_item">
-            <a href="#" id="facebook_btn">
-                <img src="{{ url_for('static', filename='facebook.png') }}" style="max-width: 50%;" onclick="alertFunction(
-                    btnId='facebook_icon', 
-                    buttonTitle='Facebook', 
-                    official='{{official.first_name}} {{official.last_name}}',
-                    // alertDiv='FacebookAlertsContainer'
-                    )">
+        
+                <div class="mt-3">
+                    <span>{{official.first_name}}</span>
+                    <span>{{official.last_name}}</span>
+                </div>
+                <div class="sidebar_links">
+                    <h2>Links</h2>
+                    {% if official.twitter_account %}
+                    <div class="official_user_info_item">
+                        <a href="https://twitter.com/{{ official.twitter_account }}" target="_blank">
+                            <img src="{{ url_for('static', filename='twitter.png') }}" style="max-width: 50%;">
+                        </a>
+                    </div>
+                    {% else %}
+                    <div class="official_user_info_item">
+                        <a href="#">
+                            <img src="{{ url_for('static', filename='twitter.png') }}" style="max-width: 50%;" onclick="alert('coming soon')">
+                        </a>
+                    </div>
+                    {% endif %}
+                    {% if official.facebook_account %}
+                    <div class="official_user_info_item">
+                        <a href="https://facebook.com/{{ official.facebook_account }}" target="_blank">
+                            <img src="{{ url_for('static', filename='facebook.png') }}" style="max-width: 50%;">
+                        </a>
+                    </div>
+                    {% else %}
+                    <div id="facebook_icon" class="official_user_info_item">
+                        <a href="#" id="facebook_btn">
+                            <img src="{{ url_for('static', filename='facebook.png') }}" style="max-width: 50%;" onclick="alertFunction(
+                                btnId='facebook_icon', 
+                                buttonTitle='Facebook', 
+                                official='{{official.first_name}} {{official.last_name}}',
+                                // alertDiv='FacebookAlertsContainer'
+                                )">
             </a>
         </div>
         <div id="alertsContainer">
-
+            
         </div>
-    {% endif %}
-    {% if official.youtube_account %}
-    <div class="official_user_info_item">
-        <a href="https://youtube.com/{{ official.youtube_account }}" target="_blank">
-            <img src="{{ url_for('static', filename='youtube.png') }}" style="max-width: 50%;">
-        </a>
-    </div>
-{% else %}
-    <div id="youtube_icon" class="official_user_info_item">
-        <a href="#" id="youtube_btn">
-            <img src="{{ url_for('static', filename='youtube.png') }}" style="max-width: 50%;" onclick="alertFunction(
-                btnId='youtube_icon', 
-                buttonTitle='youtube', 
-                official='{{official.first_name}} {{official.last_name}}',
-                // alertDiv='FacebookAlertsContainer'
-                )">
+        {% endif %}
+        {% if official.youtube_account %}
+        <div class="official_user_info_item">
+            <a href="https://youtube.com/{{ official.youtube_account }}" target="_blank">
+                <img src="{{ url_for('static', filename='youtube.png') }}" style="max-width: 50%;">
+            </a>
+        </div>
+        {% else %}
+        <div id="youtube_icon" class="official_user_info_item">
+            <a href="#" id="youtube_btn">
+                <img src="{{ url_for('static', filename='youtube.png') }}" style="max-width: 50%;" onclick="alertFunction(
+                    btnId='youtube_icon', 
+                    buttonTitle='youtube', 
+                    official='{{official.first_name}} {{official.last_name}}',
+                    // alertDiv='FacebookAlertsContainer'
+                    )">
         </a>
     </div>
     <div id="alertsContainer">
-
+        
     </div>
-{% endif %}
-{% if official.youtube_account %}
-<div class="official_user_info_item">
-    <a href="{{ official.url }}" target="_blank">
-        <img src="{{ url_for('static', filename='website.png') }}" style="max-width: 50%;">
-    </a>
-</div>
-{% else %}
-<div id="website_icon" class="official_user_info_item">
-    <a href="#" id="website_btn">
-        <img src="{{ url_for('static', filename='website.png') }}" style="max-width: 50%;" onclick="alertFunction(
-            btnId='website_icon', 
-            buttonTitle='website', 
-            official='{{official.first_name}} {{official.last_name}}',
-            )">
+    {% endif %}
+    {% if official.youtube_account %}
+    <div class="official_user_info_item">
+        <a href="{{ official.url }}" target="_blank">
+            <img src="{{ url_for('static', filename='website.png') }}" style="max-width: 50%;">
+        </a>
+    </div>
+    {% else %}
+    <div id="website_icon" class="official_user_info_item">
+        <a href="#" id="website_btn">
+            <img src="{{ url_for('static', filename='website.png') }}" style="max-width: 50%;" onclick="alertFunction(
+                btnId='website_icon', 
+                buttonTitle='website', 
+                official='{{official.first_name}} {{official.last_name}}',
+                )">
     </a>
 </div>
 <div id="alertsContainer">
-
+    
 </div>
 {% endif %}
+</div>
+<DIV></DIV>
+<DIV></DIV>
+<DIV></DIV>
 
-        </div>
-        </div>
+</div>
+</div>
 
         <div class="official_center_div">
             <div class="official_header">
@@ -123,10 +130,14 @@
     {% set sorted_posts = posts | sort(attribute=sort_criteria, reverse=True) %}
 
     {% for post in sorted_posts %}
-        <a href="{{ post.url }}" class="card_link" target="_blank">
-            <div class="card border-2 border-danger mb-3 gap-3 bg-light" style="max-width:40rem; position: relative;">
-                <img src="{{ post.post_avatar }}" class='user_avatar' alt="">
+    <a href="{{ post.url }}" class="card_link" target="_blank">
+        <div class="card border-2 border-danger mb-3 gap-3 bg-light" style="max-width:40rem; position: relative;">
+            <img src="{{ post.post_avatar }}" class='user_avatar' alt="">
+            {% if post.username[1:] == post.query[23:] %}
                 <div class="card-header bg-dark text-light is_link">{{ official.first_name }} {{ official.last_name }}'s tweet</div>
+            {% else %}
+                <div class="card-header bg-dark text-light is_link">{{ official.first_name }} {{official.last_name}} retweeted {{post.username}}</div>
+            {% endif %}
                 <div class="card-body bg-light text-dark">
                     <p class="card-text is_link">{{ post.text }}</p>
                     <div class="text-end">
