--- a/flask_app/Templates/index.html
+++ b/flask_app/Templates/index.html
@@ -22,6 +22,25 @@
         </form>
     </div>
 
+    <div class="row my-5 search_bar d-flex justify-content-center">
+        <p>
+            collect data from twitter scraper
+        </p>
+        <form action="../official/twitter/update">
+            <input type="datetime" name="date" id="">
+            <input type="submit" value="Collect">
+        </form>
+    </div>
+
+    <div class="test">
+        <p>test</p>
+        <form action="../official/twitter/update/test" method="post">
+            <input type="date" name="date" placeholder="date">
+            <input type="number" name="limit" placeholder="limit">
+            <input type="number" name="congress_limit" placeholder="congress_limit">
+            <input type="submit" value="test">
+        </form>
+    </div>
     {% if full_congress %}
     <p>full_congress</p>
     {% else %}
