--- a/flask_app/Templates/index.html
+++ b/flask_app/Templates/index.html
@@ -33,8 +33,8 @@
     </div>
 
     <div class="test">
-        <p>test</p>
-        <form action="../official/twitter/update/test" method="post">
+        <p>Get tweets</p>
+        <form action="../official/twitter/update" method="post">
             <input type="date" name="date" placeholder="date">
             <input type="number" name="limit" placeholder="limit">
             <input type="number" name="congress_limit" placeholder="congress_limit">
