--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body,
 html {
     background-color: white;
@@ -40,6 +44,41 @@ html {
     flex-direction: column;
     justify-content: space-between;
 }
+
+.reps {
+        text-align: center;
+        height: 10vh;
+        width: 100%;
+        border-right: 2px solid red;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        box-shadow: 0px 0px 50px red;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: black;
+        color: white;
+        margin: 0;
+        padding: 0;
+    }
+
+    .sen-box {
+        width: 90vw;
+        display: flex;
+        flex-wrap: wrap;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        align-items: center;
+        justify-content: start;
+        flex-direction: row;
+        margin: 0;
+        padding: 0;
+        gap: 10px;
+    }
+
+    .state-button{
+        margin: 0 5rem;
+    }
 
 .sidebar_links {
     height: 50%;
