--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -58,8 +58,14 @@ html {
         align-items: center;
         background-color: black;
         color: white;
-        margin: 0;
+        margin: 0 0 5rem 0;
         padding: 0;
+    }
+
+
+    .state-page-dropdowns{
+        display: flex;
+        flex-direction: row;
     }
 
     .sen-box {
