--- a/flask_app/Static/style.css
+++ b/flask_app/Static/style.css
@@ -104,7 +104,6 @@ html {
     height: 150vh;
     width: 10rem;
     top: 0;
-    z-index: 1;
 }
 
 .official_site_nav {
@@ -119,14 +118,14 @@ html {
     border-bottom-left-radius: 10px;
     box-shadow: 0px 0px 50px red;
 
-    position: fixed;
+    /* position: fixed; */
 }
 
 #alertsContainer {
-    position: absolute;
+    position:absolute;
     top: 0;
-    right: -20rem;
-    width: 20rem;
+    right: 0rem;
+    width: 20rem; 
 }
 
 .official_container {
